[package]
name = "carve"
version = "0.0.1"
authors = ["Daniel J Rollins <me@deej.io>"]
description = """
carve is a terminal-focused tool for interactively searching and exploring text
files and logs.
"""
documentation = "https://github.com/deej-io/carve"
homepage = "https://github.com/deej-io/carve"
repository = "https://github.com/deej-io/carve"
keywords = ["grep", "pattern", "regex", "search", "text"]
categories = ["command-line-utilities", "text-processing"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
tokio = { version = "^1", features = ["full"] }
ratatui = "0.26.0"
crossterm = "0.27.0"
